--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,7 @@
 
 	<style name="Theme"></style>
 
+	<style name="AppTheme.AppBarOverlay" />
 
+	<style name="AppTheme.PopupOverlay"  />
 </resources>
