--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -43,7 +43,9 @@
             android:layout_marginTop="10dp"
             android:textColor="#000000"
             android:paddingStart="15dp"
-            android:inputType="" />
+            android:inputType="textPassword"
+           />
+
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/login_button"
             android:layout_width="200dp"
