--- a/app/src/main/res/layout/cardveiw_item_book.xml
+++ b/app/src/main/res/layout/cardveiw_item_book.xml
@@ -7,6 +7,9 @@
     android:layout_height="190dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
+    android:paddingLeft="15dp"
+    android:paddingStart="15dp"
+    
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
