--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -79,7 +79,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:hint="Quantity"
-            android:inputType=""
+            android:digits="0123456789."
+            android:inputType="numberDecimal"
             android:lines="1"
             android:paddingLeft="15dp"
             android:paddingStart="15dp"
