--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,15 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context="com.book.sl.thlibarary.MainActivity">
 	<item
-		android:id="@+id/action_settings"
+		android:id="@+id/menu_search"
+		android:icon="@drawable/search"
 		android:orderInCategory="100"
-		android:title="@string/action_settings"
-		app:showAsAction="never" />
+		android:title="Search" />
+	<item
+		android:id="@+id/menu_list"
+		android:title="List"
+		android:icon="@drawable/notification"
+		android:orderInCategory="101"
+		app:showAsAction="never"/>
+
 </menu>
